--- a/tableViewProject/Base.lproj/Main.storyboard
+++ b/tableViewProject/Base.lproj/Main.storyboard
@@ -82,10 +82,10 @@
             </objects>
             <point key="canvasLocation" x="1909.5999999999999" y="686.80659670164926"/>
         </scene>
-        <!--Multiple Sections-->
+        <!--MultipleSections-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MultipleSections" customModule="tableViewProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="MultipleSections" customClass="MultipleSections" customModule="tableViewProject" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="q6R-O2-jYQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
